--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.2.2",
-    "@types/styled-components": "^5.1.15",
-    "@graphql-codegen/typescript-react-apollo": "3.2.0",
-    "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/fragment-matcher": "3.2.0",
+    "@graphql-codegen/introspection": "2.1.0",
     "@graphql-codegen/typescript": "2.3.0",
-    "@graphql-codegen/introspection": "2.1.0"
+    "@graphql-codegen/typescript-operations": "2.2.0",
+    "@graphql-codegen/typescript-react-apollo": "3.2.0",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint-config-airbnb": "^18.2.1"
   }
 }
