--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -30,4 +30,5 @@ rules:
     'react/react-in-jsx-scope': 'off',
     'no-shadow': 'off',
     '@typescript-eslint/explicit-module-boundary-types': 'off',
+    'indent': 'off',
   }
