--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "graphql-codegen --config codegen.yml"
+    "Update GraphQL schema": "apollo client:download-schema --endpoint=http://localhost:8080/v1/graphql schema.graphql && graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
