--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/recoil": "^0.0.9",
     "graphql": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.5.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2"
   },
