--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint-config-airbnb": "^18.2.1"
   }
 }
