--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@fontsource/oswald": "^4.5.1",
+    "@fontsource/roboto": "^4.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -56,7 +57,6 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
-    "babel-plugin-styled-components": "^1.13.3",
     "eslint-config-airbnb": "^18.2.1"
   }
 }
