--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -37,4 +37,5 @@ rules:
     'no-unused-vars': 'off',
     'object-curly-newline': 'off',
     'operator-linebreak': 'off',
+    'import/prefer-default-export': 'off',
   }
