--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "graphql": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.0",
     "styled-components": "^5.3.3",
