--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/recoil": "^0.0.9",
-    "graphql": "^16.0.0",
+    "apollo": "^2.33.9",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "recoil": "^0.5.0",
     "styled-components": "^5.3.3",
+    "subscriptions-transport-ws": "^0.11.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
