--- a/hasura/docker-compose.yaml
+++ b/hasura/docker-compose.yaml
@@ -3,10 +3,9 @@ services:
   postgres:
     image: postgres:12
     restart: always
-    ports:
-      - '5432:5432'
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./init-db/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
     environment:
       POSTGRES_PASSWORD: a
   PgAdmin:
