--- a/hasura/metadata/databases/bloc/tables/public_notes.yaml
+++ b/hasura/metadata/databases/bloc/tables/public_notes.yaml
@@ -5,3 +5,18 @@ object_relationships:
 - name: utilisateur
   using:
     foreign_key_constraint_on: id_utilisateur
+select_permissions:
+- permission:
+    columns: []
+    filter: {}
+  role: test
+update_permissions:
+- permission:
+    check: null
+    columns: []
+    filter: {}
+  role: test
+delete_permissions:
+- permission:
+    filter: {}
+  role: test
