--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -39,4 +39,5 @@ rules:
     'operator-linebreak': 'off',
     'react/jsx-curly-newline': 'off',
     'react/no-array-index-key': 'off',
+    'import/prefer-default-export': 'off',
   }
