--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -40,4 +40,7 @@ rules:
     'react/jsx-curly-newline': 'off',
     'react/no-array-index-key': 'off',
     'import/prefer-default-export': 'off',
+    'no-param-reassign': 'off',
+    'import/no-mutable-exports': 'off',
+    '@typescript-eslint/no-empty-function': 'off',
   }
