--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.0",
+    "recoil-nexus": "^0.3.9",
     "styled-components": "^5.3.3",
     "subscriptions-transport-ws": "^0.11.0",
     "typescript": "^4.1.2"
