--- a/hasura/docker-compose.yaml
+++ b/hasura/docker-compose.yaml
@@ -29,20 +29,16 @@ services:
       - 'postgres'
     restart: always
     environment:
-      ## postgres database to store Hasura metadata
       HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:a@postgres:5432/postgres
-      ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
       PG_DATABASE_URL: postgres://postgres:a@postgres:5432/postgres
-      ## enable the console served by server
-      HASURA_GRAPHQL_ENABLE_CONSOLE: 'false' # set to 'false" to disable console
-      ## enable debugging mode. It is recommended to disable this in production
+      HASURA_GRAPHQL_ENABLE_CONSOLE: 'false'
       HASURA_GRAPHQL_DEV_MODE: 'true'
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      ## uncomment next line to set an admin secret
-      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       HASURA_GRAPHQL_LIVE_QUERIES_MULTIPLEXED_REFETCH_INTERVAL: 50
-      HASURA_GRAPHQL_JWT_SECRET: '{  "type": "HS256",  "key": "f1c9bceb42f92ffc8648e04a70f2f50b91ac9f2f5b74994e5c00f7cf0f0326b1b98c574a2ebaaaa8f62e6b8d03116560bd81c8ae396b2e0fb5342e78a1208748", "claims_namespace_path": "$$.claims"}'
+      HASURA_GRAPHQL_JWT_SECRET: '{  "type": "HS256",  "key":
+        "f1c9bceb42f92ffc8648e04a70f2f50b91ac9f2f5b74994e5c00f7cf0f0326b1b98c574a2ebaaaa8f62e6b8d03116560bd81c8ae396b2e0fb5342e78a1208748",
+        "claims_namespace_path": "$$.claims"}'
       HASURA_GRAPHQL_ADMIN_SECRET: flo
       HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
 volumes:
-  db_data:
+  db_data: null
