--- a/hasura/docker-compose.yaml
+++ b/hasura/docker-compose.yaml
@@ -35,10 +35,10 @@ services:
       HASURA_GRAPHQL_DEV_MODE: 'true'
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_LIVE_QUERIES_MULTIPLEXED_REFETCH_INTERVAL: 50
-      HASURA_GRAPHQL_JWT_SECRET: '{  "type": "HS256",  "key":
-        "f1c9bceb42f92ffc8648e04a70f2f50b91ac9f2f5b74994e5c00f7cf0f0326b1b98c574a2ebaaaa8f62e6b8d03116560bd81c8ae396b2e0fb5342e78a1208748",
-        "claims_namespace_path": "$$.claims"}'
-      HASURA_GRAPHQL_ADMIN_SECRET: flo
-      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
+      # HASURA_GRAPHQL_JWT_SECRET: '{  "type": "HS256",  "key":
+      #   "f1c9bceb42f92ffc8648e04a70f2f50b91ac9f2f5b74994e5c00f7cf0f0326b1b98c574a2ebaaaa8f62e6b8d03116560bd81c8ae396b2e0fb5342e78a1208748",
+      #   "claims_namespace_path": "$$.claims"}'
+      # HASURA_GRAPHQL_ADMIN_SECRET: flo
+      # HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
 volumes:
   db_data: null
