--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/recoil": "^0.0.9",
     "apollo": "^2.33.9",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "graphql-ws": "^5.5.5",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.0",
     "recoil-nexus": "^0.3.9",
@@ -34,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "Update GraphQL schema": "apollo client:download-schema --endpoint=http://localhost:8080/v1/graphql schema.graphql && graphql-codegen --config codegen.yml"
+    "Update GraphQL schema": "apollo client:download-schema --header=\"X-Hasura-Admin-Secret: flo\" --endpoint=http://localhost:8080/v1/graphql schema.graphql && graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +64,7 @@
     "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.0",
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.1",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
