--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "recoil-nexus": "^0.3.9",
     "styled-components": "^5.3.3",
     "subscriptions-transport-ws": "^0.11.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -94,6 +95,7 @@
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.1",
     "@types/styled-components": "^5.1.15",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "eslint-config-airbnb": "^18.2.1",
